--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/zwug/military#readme",
   "dependencies": {
     "bootstrap": "3.3.5",
+    "bootswatch": "^3.3.5",
     "classnames": "2.1.3",
     "react": "0.13.3",
     "react-flexgrid": "0.7.0",
