--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "bootstrap": "3.3.5",
     "bootswatch": "^3.3.5",
     "classnames": "2.1.3",
+    "jquery": "^2.1.4",
     "react": "0.13.3",
     "react-flexgrid": "0.7.0",
-    "react-router": "1.0.0-rc1"
+    "react-router": "1.0.0-rc1",
   },
   "devDependencies": {
     "autoprefixer-loader": "3.1.0",
