--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "webpack": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,7 @@
     "jquery": "^2.1.4",
     "react": "0.13.3",
     "react-flexgrid": "0.7.0",
-    "react-router": "1.0.0-rc1",
+    "react-router": "1.0.0-rc1"
   },
   "devDependencies": {
     "autoprefixer-loader": "3.1.0",
