--- a/package.json
+++ b/package.json
@@ -18,36 +18,38 @@
   },
   "homepage": "https://github.com/zwug/military#readme",
   "dependencies": {
+    "babel-preset-react": "6.0.15",
     "bootstrap": "3.3.5",
-    "bootswatch": "^3.3.5",
-    "classnames": "2.1.3",
-    "jquery": "^2.1.4",
-    "react": "0.13.3",
+    "bootswatch": "3.3.5",
+    "classnames": "2.2.0",
+    "jquery": "2.1.4",
+    "react": "0.14.2",
+    "react-dom": "0.14.2",
     "react-flexgrid": "0.7.0",
-    "react-router": "1.0.0-rc1"
+    "react-router": "1.0.0-rc3"
   },
   "devDependencies": {
     "autoprefixer-loader": "3.1.0",
-    "babel-core": "5.8.23",
-    "babel-eslint": "4.1.1",
+    "babel-core": "6.0.17",
+    "babel-eslint": "4.1.3",
     "babel-jest": "5.3.0",
-    "babel-loader": "5.3.2",
-    "babel-runtime": "5.8.20",
-    "css-loader": "0.18.0",
-    "eslint": "1.3.1",
-    "eslint-config-nkt": "0.6.0",
-    "eslint-plugin-react": "3.3.2",
+    "babel-loader": "6.0.1",
+    "babel-runtime": "6.0.14",
+    "css-loader": "0.21.0",
+    "eslint": "1.8.0",
+    "eslint-config-nkt": "0.11.0",
+    "eslint-plugin-react": "3.6.3",
     "extract-text-webpack-plugin": "0.8.2",
     "file-loader": "0.8.4",
-    "html-webpack-plugin": "1.6.1",
-    "less": "2.5.1",
-    "less-loader": "2.2.0",
+    "html-webpack-plugin": "1.6.2",
+    "less": "2.5.3",
+    "less-loader": "2.2.1",
     "react-hot-loader": "1.3.0",
-    "style-loader": "0.12.3",
-    "svgo": "^0.5.6",
-    "svgo-loader": "^1.1.0",
+    "style-loader": "0.13.0",
+    "svgo": "0.5.6",
+    "svgo-loader": "1.1.0",
     "url-loader": "0.5.6",
-    "webpack": "1.12.1",
-    "webpack-dev-server": "1.10.1"
+    "webpack": "1.12.2",
+    "webpack-dev-server": "1.12.1"
   }
 }
