--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
   },
   "homepage": "https://github.com/zwug/military#readme",
   "dependencies": {
+    "babel-preset-es2015": "6.0.15",
     "babel-preset-react": "6.0.15",
     "bootstrap": "3.3.5",
     "bootswatch": "3.3.5",
     "classnames": "2.2.0",
+    "history": "1.13.0",
     "jquery": "2.1.4",
     "react": "0.14.2",
     "react-dom": "0.14.2",
     "react-flexgrid": "0.7.0",
-    "react-router": "1.0.0-rc3"
+    "react-redux": "4.0.0",
+    "react-router": "1.0.0-rc3",
+    "redux": "3.0.4",
+    "redux-router": "1.0.0-beta3"
   },
   "devDependencies": {
     "autoprefixer-loader": "3.1.0",
@@ -45,6 +50,7 @@
     "less": "2.5.3",
     "less-loader": "2.2.1",
     "react-hot-loader": "1.3.0",
+    "redux-devtools": "^2.1.5",
     "style-loader": "0.13.0",
     "svgo": "0.5.6",
     "svgo-loader": "1.1.0",
