--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "classnames": "2.2.0",
     "history": "1.13.0",
     "react": "0.14.2",
+    "react-bootstrap": "^0.27.3",
     "react-dom": "0.14.2",
     "react-flexgrid": "0.7.0",
     "react-redux": "4.0.0",
