--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "classnames": "2.2.0",
     "history": "1.13.0",
     "react": "0.14.2",
-    "react-bootstrap": "^0.27.3",
+    "react-bootstrap": "0.27.3",
     "react-dom": "0.14.2",
     "react-flexgrid": "0.7.0",
     "react-redux": "4.0.0",
     "react-router": "1.0.0-rc3",
+    "react-router-bootstrap": "0.19.3",
     "redux": "3.0.4"
   },
   "devDependencies": {
@@ -49,7 +50,7 @@
     "less": "2.5.3",
     "less-loader": "2.2.1",
     "react-hot-loader": "1.3.0",
-    "redux-devtools": "^2.1.5",
+    "redux-devtools": "2.1.5",
     "style-loader": "0.13.0",
     "svgo": "0.5.6",
     "svgo-loader": "1.1.0",
