--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "bootswatch": "3.3.5",
     "classnames": "2.2.0",
     "history": "1.13.0",
-    "html-loader": "^0.3.0",
+    "html-loader": "0.3.0",
     "react": "0.14.2",
     "react-bootstrap": "0.27.3",
     "react-dom": "0.14.2",
