--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "classnames": "2.2.0",
     "history": "1.13.0",
     "html-loader": "0.3.0",
+    "imports-loader": "^0.6.5",
+    "pdfjs-dist": "^1.5.248",
     "react": "0.14.2",
     "react-bootstrap": "0.28.1",
     "react-dom": "0.14.2",
     "react-flexgrid": "0.7.0",
+    "react-pdf": "0.0.10",
     "react-redux": "4.0.0",
     "react-router": "1.0.0-rc3",
     "react-router-bootstrap": "0.19.3",
